--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
           </section>
         </div>
 
-        <div id="info">information</div>
-
-        <div id="footer">footer</div>
+        <div id="info">
+          <p>information</p>
+        </div>
+        <div id="footer">
+          <p>footer</p>
+        </div>
       </div>
 
     </body>
